NAVBAR: Fixed the endless loop of repeatedly adding and removing the visible class caused by layout changes because I havent set the same height to header and header.visible. Also made the navbar little transparent.

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -3,12 +3,13 @@ header.visible{
     width: 100%!important;
     height: 150px;
     top: 0px;
-    transition: 0.25s linear;
+    transition: top 0.25s linear;
     z-index:9999;
 }
 
 header {
     top: -150px;
+    height: 150px;
     box-shadow: 0 10px 50px rgba(0, 0, 0, 0.14);
   }
 
@@ -20,7 +21,7 @@ header {
     width: 100%!important;
     height: 100%;
     background: rgb(37,163,194);
-    background: linear-gradient(90deg, rgba(37,163,194,1) 0%, rgba(77,88,155,1) 100%);
+    background: linear-gradient(90deg, rgba(37,163,194,0.8) 0%, rgba(77,88,155,0.8) 100%);
 }
 
 .navbar-logo{
@@ -96,7 +97,7 @@ body.open .nav-item{display:unset}
     header.visible{
         height: 100px;
     }
-    header{top:-100px;}
+    header{height:100px;}
     .burger {display:none;}
     .nav-item{display: unset;}
     .nav-item{width:auto;}
